--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,9 @@
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
+      {% include comments.html %}
       </div>
     </div>
-
     {% include footer.html %}
 
   </body>
