--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header class="site-header">
 
   <div class="wrapper">
-    <section role="banner">
-        <img src="https://github.com/truongdq/truongdq.github.io/raw/master/images/banner.png" />
-    </section>
+    <!--<section role="banner">-->
+        <!--<img src="https://github.com/truongdq/truongdq.github.io/raw/master/images/banner.png" />-->
+    <!--</section>-->
 
     <a class="site-title" href="{{ site.baseurl }}/">Home</a>
     <!--<a class="site-title" href="{{ site.baseurl }}/jekyll/update/2015/08/17/publication.html">&nbsp;|&nbsp;Publications</a>-->
