--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -47,6 +47,7 @@
 
       <div class="footer-col  footer-col-3">
         <p class="text">{{ site.description }}</p>
+    <div id="clustrmaps-widget"></div><script type="text/javascript">var _clustrmaps = {'url' : 'http://truongdq.com', 'user' : 1180568, 'server' : '3', 'id' : 'clustrmaps-widget', 'version' : 1, 'date' : '2015-10-08', 'lang' : 'en', 'corners' : 'square' };(function (){ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'http://www3.clustrmaps.com/counter/map.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x); })();</script><noscript><a href="http://www3.clustrmaps.com/user/640120398"><img src="http://www3.clustrmaps.com/stats/maps-no_clusters/truongdq.com-thumb.jpg" alt="Locations of visitors to this page" /></a></noscript>
       </div>
     </div>
 
