--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,5 @@
 
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <meta name="google-site-verification" content="C-FNNbIyH6-PMp0EPeOQLo3AydKl2ZI1GzfIgc6enQo" />
 </head>
